--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
  <title>OSR Dungeon</title>
   <script src="./openseadragon-bin-5.0.0/openseadragon.min.js"></script>
-  <script src="./openseadragon-bookmark-url.js"></script>
+  <script src="./openseadragon-bin-5.0.0/openseadragon-bookmark-url.js"></script>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
   var viewer = OpenSeadragon({
     id: "openseadragon1",
     prefixUrl: "./images/",
-    tileSources: "./MyResultingDZI.dzi"
+    tileSources: "./Hybelior100Dz.dzi"
   });
 </script>
 </body>
