--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- <title>OSR Dungeon</title>
+ <title>Hybelior World Map</title>
   <script src="./openseadragon-bin-5.0.0/openseadragon.min.js"></script>
   <script src="./openseadragon-bin-5.0.0/openseadragon-bookmark-url.js"></script>
 </head>
