--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             };
         }
 
-        Papa.parse("Data/DT_Villes.csv", {
+        Papa.parse("./Data/DT_Villes.csv", {
             download: true,
             header: true,
             complete: function(results) {
