--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             font-family: 'Copperplate Gothic Std', sans-serif;
             display: none; /* Caché par défaut */
+            z-index: 1001; /* S'assurer que la fenêtre est au-dessus des autres éléments */
         }
 
         .info-panel h2 {
@@ -61,19 +62,20 @@
 </head>
 
 <body>
-<div class="controls">
-    <button id="toggleImage">Toggle Image</button>
-    <button id="toggleText">Toggle Text</button>
-</div>
-<div id="openseadragon1" style="width: calc(100% - 20px); height: calc(100% - 20px);"></div>
+<div id="openseadragon1" style="width: calc(100% - 20px); height: calc(100% - 20px); position: relative;">
+    <!-- Boutons de contrôle -->
+    <div class="controls">
+        <button id="toggleImage">Toggle Image</button>
+        <button id="toggleText">Toggle Text</button>
+    </div>
 
-<!-- Fenêtre d'information pour afficher les détails de la ville -->
-<div id="infoPanel" class="info-panel">
-    <span id="closeInfoPanel" style="position:absolute; top:10px; right:10px; cursor:pointer; font-weight:bold;">&times;</span>
-    <h2 id="cityName">Nom de la ville</h2>
-    <p id="cityInfo">Texte placeholder pour l'information sur la ville...</p>
+    <!-- Fenêtre d'information pour afficher les détails de la ville -->
+    <div id="infoPanel" class="info-panel">
+        <span id="closeInfoPanel" style="position:absolute; top:10px; right:10px; cursor:pointer; font-weight:bold;">&times;</span>
+        <h2 id="cityName">Nom de la ville</h2>
+        <p id="cityInfo">Texte placeholder pour l'information sur la ville...</p>
+    </div>
 </div>
-
 
 <script type="text/javascript">
     var viewer = OpenSeadragon({
@@ -81,11 +83,10 @@
         prefixUrl: "./images/",
         tileSources: "./Hybelior100Dz.dzi"
     });
-	
-	document.getElementById('closeInfoPanel').addEventListener('click', function() {
-		document.getElementById('infoPanel').style.display = 'none';
-	});
 
+    document.getElementById('closeInfoPanel').addEventListener('click', function() {
+        document.getElementById('infoPanel').style.display = 'none';
+    });
 
     // Ajouter l'overlay SVG
     var svgOverlay = viewer.svgOverlay();
