--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             top: 10px;
             right: 10px;
             width: 300px;
-            height: 600px;
+	    height: auto; /* Hauteur automatique en fonction du contenu */
+            max-height: 600px; /* Hauteur maximale de 600px */
             padding: 15px;
             background-color: white;
             border: 1px solid #ccc;
