--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         .controls button:hover {
             background-color: #0056b3;
         }
+	.controls input[type="text"] {
+            width: 200px;
+            color: black;
+            background-color: white;
+            padding: 8px;
+        }
 
         /* Style pour la fenêtre d'information */
         .info-panel {
@@ -77,6 +83,7 @@
 <div id="openseadragon1" style="width: calc(100% - 20px); height: calc(100% - 20px); position: relative;">
     <!-- Boutons de contrôle -->
     <div class="controls">
+	<button id="searchButton">Rechercher</button>
         <button id="toggleText">Toggle Text</button>
     </div>
 
@@ -268,6 +275,29 @@
                 rectElement.style.display = 'none';
             }
         });
+    });
+// Fonction de recherche et de zoom
+    document.getElementById('searchButton').addEventListener('click', function() {
+        var query = document.getElementById('searchInput').value.toLowerCase();
+        var found = false;
+
+        [continentsElements, paysElements, regionElements, villesElements].forEach(function(elementsArray) {
+            elementsArray.forEach(function(element) {
+                if (element.name.toLowerCase() === query) {
+                    found = true;
+                    var point = viewer.viewport.viewportToImageCoordinates(element.coord.x, element.coord.y);
+                    viewer.viewport.panTo(point);
+                    viewer.viewport.zoomTo(8); // Vous pouvez ajuster ce niveau de zoom
+                    document.getElementById('cityName').textContent = element.name;
+                    document.getElementById('cityInfo').textContent = "Zoom sur : " + element.name;
+                    document.getElementById('infoPanel').style.display = 'block';
+                }
+            });
+        });
+
+        if (!found) {
+            alert("Aucun résultat trouvé pour " + query);
+        }
     });
 </script>
 </body>
