--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
             z-index: 1001; /* S'assurer que la fenêtre est au-dessus des autres éléments */
 	    overflow-y: auto; /* Barre de défilement verticale si nécessaire */
         }
+		.suggestions-list {
+			border: 1px solid #ccc;
+			background-color: white;
+			max-height: 150px;
+			overflow-y: auto;
+			display: none; /* Caché par défaut */
+			position: absolute;
+			width: 200px;
+			z-index: 1000;
+		}
+
+		.suggestions-list div {
+			padding: 8px;
+			cursor: pointer;
+		}
+
+		.suggestions-list div:hover {
+			background-color: #f0f0f0;
+		}
+
 
         .info-panel h2 {
 		    font-family: 'Verdana', sans-serif; /* Police pour les paragraphes */
@@ -83,9 +103,12 @@
 <div id="openseadragon1" style="width: calc(100% - 20px); height: calc(100% - 20px); position: relative;">
     <!-- Boutons de contrôle -->
     <div class="controls">
-	<button id="searchButton">Rechercher</button>
-        <button id="toggleText">Toggle Text</button>
-    </div>
+		<input type="text" id="searchInput" placeholder="Rechercher un nom..." style="width: 200px; padding: 8px;">
+		<div id="suggestions" class="suggestions-list"></div> <!-- Conteneur pour les suggestions -->
+		<button id="searchButton">Rechercher</button>
+		<button id="toggleText">Toggle Text</button>
+	</div>
+
 
     <!-- Fenêtre d'information pour afficher les détails de la ville -->
     <div id="infoPanel" class="info-panel">
@@ -116,6 +139,8 @@
     var villesElements = [];
     var allTextElements = [];  // Pour toggle global
     var allRectElements = [];  // Pour toggle des rectangles
+	// Variable pour stocker tous les noms (pays, continents, etc.)
+	var allNames = [];
 
     // Fonction de conversion des coordonnées pour les adapter à OpenSeadragon
     function convertCoordinates(x, y) {
@@ -145,6 +170,15 @@
                         console.error("Converted coordinates are invalid:", convertedCoord);
                         return; // Ignorer cet élément si les coordonnées converties ne sont pas valides
                     }
+					
+					// Assurez-vous que 'nom' est bien récupéré
+					var name = item[''];
+					console.log("Processing: " + name);  // Log pour vérifier le nom
+
+					if (!name) {
+						console.error("No name found for item with coordinates:", x, y);
+						return; // Ignorer cet élément si le nom est indéfini ou vide
+					}
 
                     // Calcul dynamique de l'épaisseur du contour en fonction de la taille du texte
                     var strokeWidth = fontSize * 0.06;
@@ -160,7 +194,7 @@
                     textElement.setAttribute("text-anchor", "middle"); // Centrage du texte
                     textElement.setAttribute("font-family", "Copperplate Gothic Std, sans-serif"); // Police personnalisée
                     textElement.setAttribute("pointer-events", "none");
-                    textElement.textContent = item[''];  // Texte provenant du CSV
+                    textElement.textContent = name;  // Texte provenant du CSV
 
                     // Calcul de la largeur et de la hauteur du rectangle basé sur le texte
                     var textWidth = item[''].length * fontSize * 0.6; // Ajustez selon votre police
@@ -184,7 +218,7 @@
 						element: rectElement,  // Événements de clic seulement sur le rectangle
 						clickHandler: function(event) {
 							event.preventDefaultAction = true; // Empêche le zoom
-							document.getElementById('cityName').textContent = item['']; // Nom du pays
+							document.getElementById('cityName').textContent = name; // Nom du pays
 							
 							// Construire le contenu de l'info-bulle avec les informations supplémentaires
 							var infoContent = `
@@ -199,7 +233,8 @@
 					});
 
                     // Stocker les éléments pour une gestion facile
-                    storageArray.push({text: textElement, rect: rectElement});
+                    storageArray.push({name: name, coord: convertedCoord, text: textElement, rect: rectElement});
+					allNames.push(name); // Ajouter le nom à la liste de tous les noms
                     allTextElements.push(textElement);
                     allRectElements.push(rectElement);
                 });
@@ -215,6 +250,84 @@
 	addTextAndRectFromCSV("./Data/DT_Villes.csv", "0.0011", villesElements, 0, 0);   // xOffset = 0, yOffset = 0
 	addTextAndRectFromCSV("./Data/DT_Cites.csv", "0.0015", villesElements, 0, 0);    // xOffset = 0, yOffset = 0
 	addTextAndRectFromCSV("./Data/DT_Villages_Fantasy.csv", "0.0006", villesElements, 0, 0); // xOffset = 0, yOffset = 0
+
+	// Gestion de la saisie dans la barre de recherche
+	document.getElementById('searchInput').addEventListener('input', function() {
+		var query = this.value.toLowerCase();
+		var suggestionsContainer = document.getElementById('suggestions');
+		suggestionsContainer.innerHTML = ''; // Vider les anciennes suggestions
+
+		if (query.length === 0) {
+			suggestionsContainer.style.display = 'none';
+			return;
+		}
+
+		var suggestions = allNames.filter(function(name) {
+			return name && name.toLowerCase().includes(query);  // Vérification que name est défini
+		});
+
+		if (suggestions.length > 0) {
+			suggestionsContainer.style.display = 'block';
+			suggestions.forEach(function(suggestion) {
+				var suggestionElement = document.createElement('div');
+				suggestionElement.textContent = suggestion;
+				suggestionElement.addEventListener('click', function() {
+					document.getElementById('searchInput').value = suggestion;
+					suggestionsContainer.style.display = 'none';
+				});
+				suggestionsContainer.appendChild(suggestionElement);
+			});
+		} else {
+			suggestionsContainer.style.display = 'none';
+		}
+	});
+
+	// Fonction de recherche et de zoom
+	document.getElementById('searchButton').addEventListener('click', function() {
+		var query = document.getElementById('searchInput').value.toLowerCase();
+		var found = false;
+
+		[continentsElements, paysElements, regionElements, villesElements].forEach(function(elementsArray, index) {
+			elementsArray.forEach(function(element) {
+				if (element.name && element.name.toLowerCase() === query) {
+					found = true;
+					// Utilisation des coordonnées de l'image pour centrer la vue
+					var point = new OpenSeadragon.Point(element.coord.x, element.coord.y);
+					viewer.viewport.panTo(point);  // Centre la vue sur le point
+
+					// Ajuster le niveau de zoom en fonction du type d'élément
+					var zoomLevel;
+					switch (index) {
+						case 0: // Continents
+							zoomLevel = 1.9;
+							break;
+						case 1: // Pays
+							zoomLevel = 3.9;
+							break;
+						case 2: // Régions
+							zoomLevel = 7.9;
+							break;
+						case 3: // Villes
+							zoomLevel = 17;
+							break;
+						default:
+							zoomLevel = 4; // Par défaut, zoom intermédiaire
+							break;
+					}
+					viewer.viewport.zoomTo(zoomLevel); // Appliquer le niveau de zoom
+
+					// Mise à jour de l'info panel avec les informations de l'élément trouvé
+					document.getElementById('cityName').textContent = element.name;
+					document.getElementById('cityInfo').textContent = "Zoom sur : " + element.name;
+					document.getElementById('infoPanel').style.display = 'block';
+				}
+			});
+		});
+
+		if (!found) {
+			alert("Aucun résultat trouvé pour " + query);
+		}
+	});
 
 
     // Fonction pour afficher/masquer les éléments en fonction du zoom
@@ -276,29 +389,7 @@
             }
         });
     });
-// Fonction de recherche et de zoom
-    document.getElementById('searchButton').addEventListener('click', function() {
-        var query = document.getElementById('searchInput').value.toLowerCase();
-        var found = false;
 
-        [continentsElements, paysElements, regionElements, villesElements].forEach(function(elementsArray) {
-            elementsArray.forEach(function(element) {
-                if (element.name.toLowerCase() === query) {
-                    found = true;
-                    var point = viewer.viewport.viewportToImageCoordinates(element.coord.x, element.coord.y);
-                    viewer.viewport.panTo(point);
-                    viewer.viewport.zoomTo(8); // Vous pouvez ajuster ce niveau de zoom
-                    document.getElementById('cityName').textContent = element.name;
-                    document.getElementById('cityInfo').textContent = "Zoom sur : " + element.name;
-                    document.getElementById('infoPanel').style.display = 'block';
-                }
-            });
-        });
-
-        if (!found) {
-            alert("Aucun résultat trouvé pour " + query);
-        }
-    });
 </script>
 </body>
 </html>
