--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     var viewer = OpenSeadragon({
         id: "openseadragon1",
         prefixUrl: "./images/",
-        tileSources: "./Hybelior100Dz.dzi"
+        tileSources: "./HybeliorFull/HybeliorMap.dzi"
     });
     
     document.getElementById('closeInfoPanel').addEventListener('click', function() {
