--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             font-family: 'Copperplate Gothic Std', sans-serif;
             display: none; /* Caché par défaut */
             z-index: 1001; /* S'assurer que la fenêtre est au-dessus des autres éléments */
-	    overflow-y: auto; /* Barre de défilement verticale si nécessaire */
+	    overflow: hidden; /* Empêcher le débordement */
         }  
 	/* Section fixe (entête) */
 	.info-panel-header {
@@ -67,6 +67,8 @@
 	
 	/* Contenu déroulant */
 	.info-panel-content {
+	    max-height: calc(100vh - 60px); /* Ajuster en fonction de l'en-tête */
+	    overflow-y: auto; /* Barre de défilement verticale si nécessaire */
 	    padding: 15px;
 	    text-align: justify; /* Justifier le texte */
 	}
